# LglEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
dep/: CMakeLists.txt
lgl_demo/: CMakeLists.txt  LightingInterface.cpp  LightingInterface.hpp  SimulationInterface.cpp  SimulationInterface.hpp  SimulationScene.cpp  SimulationScene.hpp  SponzaScene.cpp  SponzaScene.hpp  demo.cpp
res/imgui/: imgui.ini
res/shaders/: pbr-frag.glsl  phong-frag.glsl
res/shaders/basic/: depth-frag.glsl  tex-frag.glsl
res/shaders/patch/: patch-frag-pbr.glsl  patch-frag-phong.glsl  patch-geom.glsl  patch-tess-eval.glsl
res/shaders/sponza/: sponza-pbr-frag.glsl  sponza-pbr-vert.glsl
src/: CMakeLists.txt
src/core/: CMakeLists.txt  corestd.mpp
src/core/collision/: Collider.cpp  Collider.hpp  CuboidCollider.cpp  CuboidCollider.hpp  NullCollider.cpp  NullCollider.hpp  SphereCollider.cpp  SphereCollider.hpp  TerrainCollider.cpp  TerrainCollider.hpp  TerrainData.hpp
src/core/sceneobject/: Box.cpp  Box.hpp  SceneObject.cpp  SceneObject.hpp  Sphere.cpp  Sphere.hpp  Sponza.cpp  Sponza.hpp  Sun.cpp  Sun.hpp  Terrain.cpp  Terrain.hpp
src/core/visual/common/: Light.cpp  Light.hpp  Material.hpp  Rect.cpp  Rect.hpp
src/core/visual/mesh/: CuboidMesh.cpp  CuboidMesh.hpp  Mesh.cpp  Mesh.hpp  ModelMesh.cpp  ModelMesh.hpp  PatchSurface.cpp  PatchSurface.hpp  SphereMesh.cpp  SphereMesh.hpp  Surface.cpp  Surface.hpp
src/eng/: CMakeLists.txt  engstd.mpp
src/eng/eng/: CollisionHandler.cpp  CollisionHandler.hpp  Scene.cpp  Scene.hpp  UserInterface.cpp  UserInterface.hpp  WindowManager.cpp  WindowManager.hpp
src/util/: CMakeLists.txt  utilstd.mpp
src/util/asim/: asim.cpp  asim.hpp
src/util/gl/: BaseDefs.hpp  Debug.cpp  Debug.hpp  DebugDrawer.cpp  DebugDrawer.hpp  FrameBuffer.cpp  FrameBuffer.hpp  GpuProgram.cpp  GpuProgram.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp
src/util/glfw/: Mouse.cpp  Mouse.hpp  Time.cpp  Time.hpp  keyin.cpp  keyin.hpp
src/util/math/: Camera.cpp  Camera.hpp  Dnum.cpp  Dnum.hpp  Quaternion.cpp  Quaternion.hpp  RigidBody.cpp  RigidBody.hpp  Transformation.cpp  Transformation.hpp
