add_library(LglCore STATIC)

set_target_properties(LglCore PROPERTIES
    CXX_STANDARD 23
    CXX_STANDARD_REQUIRED YES
    CXX_EXTENSIONS NO
)

set_target_properties(LglCore PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/../bin"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/../bin"
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/../lib"
    OUTPUT_NAME "LglCore"
)

file(GLOB OBJECTS_SOURCES ${CMAKE_CURRENT_LIST_DIR}/sceneobject/*.cpp)
file(GLOB OBJECTS_HEADERS ${CMAKE_CURRENT_LIST_DIR}/sceneobject/*.hpp)
source_group(Objects FILES ${OBJECTS_SOURCES} ${OBJECTS_HEADERS})

file(GLOB COLLIDERS_SOURCES ${CMAKE_CURRENT_LIST_DIR}/collision/*.cpp)
file(GLOB COLLIDERS_HEADERS ${CMAKE_CURRENT_LIST_DIR}/collision/*.hpp)
source_group(Colliders FILES ${COLLIDERS_SOURCES} ${COLLIDERS_HEADERS})

file(GLOB_RECURSE VISUAL_SOURCES ${CMAKE_CURRENT_LIST_DIR}/visual/*.cpp)
file(GLOB_RECURSE VISUAL_HEADERS ${CMAKE_CURRENT_LIST_DIR}/visual/*.hpp)
source_group(Visual FILES ${VISUAL_SOURCES} ${VISUAL_HEADERS})

target_sources(LglCore 
PRIVATE
    FILE_SET cxx_modules TYPE CXX_MODULES FILES
    ${CMAKE_CURRENT_LIST_DIR}/corestd.mpp

PRIVATE
    ${OBJECTS_HEADERS}
    ${OBJECTS_SOURCES}

    ${COLLIDERS_HEADERS}
    ${COLLIDERS_SOURCES}

    ${VISUAL_HEADERS}
    ${VISUAL_SOURCES}
)

target_include_directories(LglCore PUBLIC ${CMAKE_CURRENT_LIST_DIR})