add_library(LglUtil STATIC)

set_target_properties(LglUtil PROPERTIES
    CXX_STANDARD 23
    CXX_STANDARD_REQUIRED YES
    CXX_EXTENSIONS NO
)

set_target_properties(LglUtil PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/../bin"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/../bin"
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/../lib"
    OUTPUT_NAME "LglUtil"
)

file(GLOB MATH_SOURCES ${CMAKE_CURRENT_LIST_DIR}/math/*.cpp)
file(GLOB MATH_HEADERS ${CMAKE_CURRENT_LIST_DIR}/math/*.hpp)
source_group(Math FILES ${MATH_SOURCES} ${MATH_HEADERS})

file(GLOB GLFW_SOURCES ${CMAKE_CURRENT_LIST_DIR}/glfw/*.cpp)
file(GLOB GLFW_HEADERS ${CMAKE_CURRENT_LIST_DIR}/glfw/*.hpp)
source_group(Glfw FILES ${GLFW_SOURCES} ${GLFW_HEADERS})

file(GLOB ASIM_SOURCES ${CMAKE_CURRENT_LIST_DIR}/asim/*.cpp)
file(GLOB ASIM_HEADERS ${CMAKE_CURRENT_LIST_DIR}/asim/*.hpp)
source_group(Asim FILES ${ASIM_SOURCES} ${ASIM_HEADERS})

file(GLOB GL_SOURCES ${CMAKE_CURRENT_LIST_DIR}/gl/*.cpp)
file(GLOB GL_HEADERS ${CMAKE_CURRENT_LIST_DIR}/gl/*.hpp)
source_group(Gl FILES ${GL_SOURCES} ${GL_HEADERS})

target_sources(LglUtil 
PRIVATE
    FILE_SET cxx_modules TYPE CXX_MODULES FILES
    ${CMAKE_CURRENT_LIST_DIR}/utilstd.mpp

PRIVATE
    ${MATH_HEADERS} 
    ${MATH_SOURCES}

    ${GLFW_HEADERS} 
    ${GLFW_SOURCES}

    ${ASIM_HEADERS} 
    ${ASIM_SOURCES}

    ${GL_HEADERS} 
    ${GL_SOURCES}
)

target_include_directories(LglUtil PUBLIC ${CMAKE_CURRENT_LIST_DIR})